// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proof request store proof request is accepted 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store proof request is ignored 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store proof request is ignored 2`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store proof request is received 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store proof request is rejected 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "REJECTED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store proof request is shown 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "NONE",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "SHOWN",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store sending proof 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "SENDING_PROOF",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store sending proof failed 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "SEND_PROOF_FAIL",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store sending proof success 1`] = `
Object {
  "pid123": Object {
    "data": Object {
      "name": "Home Address",
      "requestedAttributes": Array [
        Object {
          "label": "Address 1",
        },
        Object {
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "originalProofRequestData": Object {
      "name": "proof_req_1",
      "nonce": "123432421212",
      "requested_attrs": Object {
        "attr1_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address1",
          "schema_seq_no": 36,
        },
        "attr2_uuid": Object {
          "issuer_did": "issuerDid",
          "name": "address2",
          "schema_seq_no": 36,
        },
      },
      "requested_predicates": Object {},
      "version": "0.1",
    },
    "proofStatus": "SEND_PROOF_SUCCESS",
    "remotePairwiseDID": "senderDID1",
    "requester": Object {
      "name": "Test Issuer",
    },
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "pid123",
  },
}
`;

exports[`proof request store should correctly calculate initial state 1`] = `Object {}`;
